qucik overflow fix

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -28,7 +28,7 @@
   body {
     background-color: #fff;
     padding: .9rem;
-
+    overflow: hidden;
   }
   
   /* Ensure images and other media can't exceed the body width */
